<resources>
    <string name="app_name">My Diploma</string>

    <!--User/Event menu-->
    <string name="item_edit">Edit</string>
    <string name="item_remove">Remove</string>

    <!--Main menu-->
    <string name="item_signIn">Sign In</string>
    <string name="item_signUp">Sign Up</string>
    <string name="item_signOut">Sign Out</string>

    <!--Bottom menu-->
    <string name="item_feed">Feed</string>
    <string name="item_users">Users</string>
    <string name="item_events">Events</string>

    <!--Sign in fragment-->
    <string name="user_name">User name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="warning">Please fill in all fields for registration</string>
    <string name="login_error">Incorrect login or password, please try again</string>

    <!--navigation-->
    <string name="feed_fragment">Feed</string>
    <string name="signIn_fragment">Sign in</string>
    <string name="signUp_fragment">Sign Up</string>
    <string name="users_fragment">Users</string>
    <string name="events_fragment">Events</string>
    <string name="edit_post_fragment">Edit post</string>
    <string name="new_post_fragment">New post</string>
    <string name="new_event_fragment">New event</string>
    <string name="edit_event_fragment">Edit event</string>
    <string name="new_job_fragment">New job</string>
    <string name="edit_job_fragment">Edit job</string>

    <!--Card Event-->
    <string name="org">Organizer:</string>
    <string name="join_button_text">Join</string>
    <string name="join_button_text_2">Leave</string>
    <string name="date_is_being_specified">The date is being specified</string>
    <string name="datetime">Datetime:</string>
    <string name="hosted_by">Hosted by:</string>

    <!--New Post Fragment-->
    <string name="clear_all_button_text">Clear all</string>
    <string name="new_post_content_hint">Enter something</string>
    <string name="pick_photo_button_text">Pick photo</string>
    <string name="take_photo_button_text">Take photo</string>
    <string name="save_newPost_button">Save</string>

    <!--New Event Fragment-->
    <string name="event_title">Event title</string>
    <string name="create_event">Create event</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="accept_changes">Accept changes</string>

    <!--Jobs-->
    <string name="show_jobs">show jobs</string>
    <string name="start_from">from: %1$s</string>
    <string name="end_to">to: %1$s</string>

    <!--User Details Fragment-->
    <string name="user_details">User Details</string>
    <string name="add_job">Add job</string>

    <!--New Job Fragment-->
    <string name="enter_name">Enter name</string>
    <string name="enter_position">Enter position</string>
    <string name="enter_link">Enter link</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="create_job">Create job</string>
    <string name="close">Close</string>
    <string name="warning_message">You have to choose start time</string>

    <!--New Job Fragment-->
    <string name="reject_changes">Reject changes</string>


</resources>