<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="ru.netology.mydiploma.ui.post.FeedFragment"
        android:label="@string/feed_fragment"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_feedFragment_to_editPostFragment"
            app:destination="@id/editPostFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
        <action
            android:id="@+id/action_feedFragment_to_newPostFragment"
            app:destination="@id/newPostFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
     </fragment>

     <fragment
         android:id="@+id/signInFragment"
         android:name="ru.netology.mydiploma.ui.signin.SignInFragment"
         android:label="@string/signIn_fragment"
         tools:layout="@layout/fragment_sign_in">
         <action
             android:id="@+id/action_signInFragment_to_feedFragment"
             app:destination="@id/feedFragment"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
             app:popEnterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out" />

     </fragment>

     <fragment
         android:id="@+id/signUpFragment"
         android:name="ru.netology.mydiploma.ui.signup.SignUpFragment"
         android:label="@string/signUp_fragment"
         tools:layout="@layout/fragment_sign_up">
         <action
             android:id="@+id/action_signUpFragment_to_feedFragment"
             app:destination="@id/feedFragment"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
             app:popEnterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out" />

     </fragment>

     <fragment
         android:id="@+id/usersFragment"
         android:name="ru.netology.mydiploma.ui.user.UsersFragment"
         tools:layout="@layout/fragment_users"
         android:label="@string/users_fragment">
         <action
             android:id="@+id/action_usersFragment_to_userDetailsFragment"
             app:destination="@id/userDetailsFragment"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
             app:popEnterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out"/>
     </fragment>

    <fragment
        android:id="@+id/userDetailsFragment"
        android:name="ru.netology.mydiploma.ui.user.UserDetailsFragment"
        tools:layout="@layout/fragment_user_details"
        android:label="@string/user_details">
        <action
            android:id="@+id/action_userDetailsFragment_to_newJobFragment"
            app:destination="@id/newJobFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
        <action
            android:id="@+id/action_userDetailsFragment_to_editJobFragment"
            app:destination="@id/editJobFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
    </fragment>

    <fragment
        android:id="@+id/newJobFragment"
        android:name="ru.netology.mydiploma.ui.job.NewJobFragment"
        tools:layout="@layout/fragment_new_job"
        android:label="@string/new_job_fragment">
    </fragment>

    <fragment
        android:id="@+id/editJobFragment"
        android:name="ru.netology.mydiploma.ui.job.EditJobFragment"
        tools:layout="@layout/fragment_edit_job_fragment"
        android:label="@string/edit_job_fragment">
    </fragment>

     <fragment
         android:id="@+id/eventsFragment"
         android:name="ru.netology.mydiploma.ui.event.EventsFragment"
         tools:layout="@layout/fragment_events"
         android:label="@string/events_fragment">
         <action
             android:id="@+id/action_eventsFragment_to_newEventFragment"
             app:destination="@id/newEventFragment"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
             app:popEnterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out"/>
         <action
             android:id="@+id/action_eventsFragment_to_editEventFragment"
             app:destination="@id/editEventFragment"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
             app:popEnterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out"/>
     </fragment>

    <fragment
        android:id="@+id/newEventFragment"
        android:name="ru.netology.mydiploma.ui.event.NewEventFragment"
        tools:layout="@layout/fragment_new_event"
        android:label="@string/new_event_fragment">
    </fragment>

    <fragment
        android:id="@+id/editEventFragment"
        android:name="ru.netology.mydiploma.ui.event.EditEventFragment"
        tools:layout="@layout/fragment_edit_event"
        android:label="@string/edit_event_fragment">
    </fragment>

    <fragment
        android:id="@+id/editPostFragment"
        android:name="ru.netology.mydiploma.ui.post.EditPostFragment"
        tools:layout="@layout/fragment_edit_post"
        android:label="@string/edit_post_fragment">
        <action
            android:id="@+id/action_editPostFragment_to_feedFragment"
            app:destination="@id/feedFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
    </fragment>

    <fragment
        android:id="@+id/newPostFragment"
        android:name="ru.netology.mydiploma.ui.post.NewPostFragment"
        tools:layout="@layout/fragment_new_post"
        android:label="@string/new_post_fragment">
    </fragment>

 </navigation>