<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/ordinary_padding"
    tools:context=".ui.event.NewEventFragment">

    <FrameLayout
        android:id="@+id/new_event_buttons_container_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:padding="@dimen/ordinary_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear_all"
            style="@style/settings_buttons"
            android:text="@string/clear_all_button_text"
            app:cornerRadius="20dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="center"
            app:strokeColor="@color/grey2"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_event"
            style="@style/settings_buttons"
            android:layout_gravity="end"
            android:text="@string/create_event"
            app:cornerRadius="20dp"
            app:strokeWidth="1dp" />

    </FrameLayout>


    <ScrollView
        android:id="@+id/event_scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/ordinary_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/event_divider"
        app:layout_constraintTop_toBottomOf="@id/new_event_buttons_container_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_event_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ordinary_margin"
                android:colorControlActivated="@color/blue"
                android:gravity="start|top"
                android:hint="@string/new_post_content_hint"
                android:inputType="textMultiLine"
                android:textColorLink="@color/blue"
                app:backgroundTint="@color/blue" />

            <ImageView
                android:id="@+id/image_new_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:scaleType="center" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/event_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/ordinary_margin"
        android:background="@color/grey2"
        app:layout_constraintBottom_toTopOf="@id/choose_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_date"
        style="@style/settings_buttons"
        android:background="@android:color/transparent"
        android:text="@string/choose_date"
        android:layout_marginStart="@dimen/ordinary_margin"
        app:layout_constraintBottom_toTopOf="@+id/choose_time"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_time"
        style="@style/settings_buttons"
        android:background="@android:color/transparent"
        android:text="@string/choose_time"
        android:layout_marginBottom="@dimen/ordinary_margin"
        android:layout_marginStart="@dimen/ordinary_margin"
        app:layout_constraintBottom_toTopOf="@+id/event_buttons_container_bot"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/choose_date"
        app:layout_constraintTop_toBottomOf="@id/event_divider"
        android:layout_marginTop="@dimen/ordinary_margin"
        android:layout_marginStart="@dimen/horizontal_margin_buttons">
        <RadioButton
            android:id="@+id/online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/offline"
            android:text="@string/offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/event_buttons_container_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pick_photo"
            style="@style/settings_buttons"
            android:text="@string/pick_photo_button_text"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_pick_photo"
            app:iconTint="@color/grey2"
            app:strokeColor="@color/grey2"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/take_photo"
            style="@style/settings_buttons"
            android:layout_marginStart="@dimen/margin_horizontal_small"
            android:text="@string/take_photo_button_text"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_take_photo"
            app:iconTint="@color/grey2"
            app:strokeColor="@color/grey2"
            app:strokeWidth="1dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>